--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot==21.7
 fastai==2.7.18
-pip install torch==2.5.1+cu121 -f https://download.pytorch.org/whl/cu121/torch_stable.html
+torch==2.5.1
 numpy==1.26.4
 opencv-python==4.10.0
 Pillow==11.0.0
